--- a/v8p0r2/configs/systel.macos.cfg
+++ b/v8p0r2/configs/systel.macos.cfg
@@ -1,54 +1,57 @@
-# _____                              _______________________________
-# ____/ TELEMAC Project Definitions /______________________________/
-#
+#######################
+# configuration names #
+#######################
+
 [Configurations]
 configs: mp-gcc9 mp-openmpi-gcc9
-# _____                        ____________________________________
-# ____/ General /___________________________________/
-# Global declarations that are set by default for all the configurations
+
+
+###########
+# general #
+###########
+
 [general]
 language: 2
-modules:  system clean
-version:  v8p0r2
-#
-sfx_zip:    .zip
-sfx_lib:    .a
-sfx_obj:    .o
-sfx_mod:    .mod
+version: v8p0r2
+
+modules: clean system
+
+sfx_zip: .zip
+sfx_lib: .a
+sfx_obj: .o
+sfx_mod: .mod
 sfx_exe:
-#
-#
-val_root:   <root>/examples
-#
-val_rank:   all
-#
-mods_all:   -I <config>
-#
+val_root: <root>/examples
+val_rank: all
+mods_all: -I <config>
 incs_all:
-#
+
 cmd_obj_c: gcc-mp-9 -c <srcName> -o <objName>
-#
-# _____          __________________________________
-# ____/ Calibre9 _________________________________/
-#
-# Gfortran
-#
+
+
+#######
+# gcc #
+#######
+
 [mp-gcc9]
 brief: Gfortran compiler 9.3.0
-#
-cmd_obj:    gfortran-mp-9 -c -cpp -O2 -fconvert=big-endian -frecord-marker=4 <mods> <incs> <f95name>
-cmd_lib:    ar cru <libname> <objs>
-cmd_exe:    gfortran-mp-9 -fconvert=big-endian -frecord-marker=4 -lpthread -lm -o <exename> <objs> <libs>
-#
-# Gfortran HPC
-#
+
+cmd_obj: gfortran-mp-9 -c -cpp -O2 -fconvert=big-endian -frecord-marker=4 <mods> <incs> <f95name>
+cmd_lib: ar cru <libname> <objs>
+cmd_exe: gfortran-mp-9 -fconvert=big-endian -frecord-marker=4 -lpthread -lm -o <exename> <objs> <libs>
+
+
+###########
+# openmpi #
+###########
+
 [mp-openmpi-gcc9]
 brief: Gfortran compiler 9.3.0 with open_mpi 4.0.1
-#
+
 mpi_cmdexec: mpirun-openmpi-gcc9 -machinefile MPI_HOSTFILE -np <ncsize> <exename>
-#
-cmd_obj:    mpif90-openmpi-gcc9 -c -cpp -fPIC -O2 -fconvert=big-endian -frecord-marker=4 -DHAVE_MPI -DHAVE_VTK <mods> <incs> <f95name>
-cmd_lib:    ar cru <libname> <objs>
-cmd_exe:    mpif90-openmpi-gcc9 -fPIC -fconvert=big-endian -frecord-marker=4 -lpthread -lm -o <exename> <objs> <libs>
-#
-libs_all:   /opt/local/lib/libmetis.dylib
+
+cmd_obj: mpif90-openmpi-gcc9 -c -cpp -fPIC -O2 -fconvert=big-endian -frecord-marker=4 -DHAVE_MPI -DHAVE_VTK <mods> <incs> <f95name>
+cmd_lib: ar cru <libname> <objs>
+cmd_exe: mpif90-openmpi-gcc9 -fPIC -fconvert=big-endian -frecord-marker=4 -lpthread -lm -o <exename> <objs> <libs>
+
+libs_all: /opt/local/lib/libmetis.dylib
