--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+v7p3r0/configs/read_me_important.txt
+v8p0r0/configs/read_me_important.txt
+v8p0r2/configs/read_me_important.txt
+v8p1r1/configs/read_me_important.txt
 
